改成了自己的信息，加上了多说评论系统

--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -4,7 +4,7 @@
 
   <!-- Weibo -->
   <li class="navigation__item">
-    <a href="http://weibo.com/onevcat" title="@onevcat 的微博" target="_blank">
+    <a href="http://weibo.com/u/3159377821" title="微博" target="_blank">
       <i class='social fa fa-weibo'></i>
       <span class="label">Weibo</span>
     </a>
@@ -12,19 +12,26 @@
 
   <!-- Github -->
   <li class="navigation__item">
-    <a href="https://github.com/onevcat" title="@onevcat 的 Github" target="_blank">
+    <a href="https://github.com/gxz04220427" title="Github" target="_blank">
       <i class='social fa fa-github'></i>
       <span class="label">Github</span>
     </a>
   </li>
+  <!-- Email -->
+  <li class="navigation__item">
+    <a href="https://cn.linkedin.com/in/xiaozhong-guo-b6481b75" title="Linkedin">
+      <i class='social fa fa-linkedin'></i>
+      <span class="label">Linkedin</span>
+    </a>
+  </li>
 
   <!-- Twitter -->
-  <li class="navigation__item">
+  <!--<li class="navigation__item">
     <a href="http://twitter.com/onevcat" title="@onevcat" target="_blank">
       <i class='social fa fa-twitter'></i>
       <span class="label">Twitter</span>
     </a>
-  </li>
+  </li>-->
   
   <!-- RSS -->
   <li class="navigation__item">
@@ -36,7 +43,7 @@
 
   <!-- Email -->
   <li class="navigation__item">
-    <a href="mailto:onev@onevcat.com" title="邮件联系我">
+    <a href="mailto:gxz04220427@163.com" title="邮件联系我">
       <i class='social fa fa-envelope'></i>
       <span class="label">Email</span>
     </a>
