--- a/partials/comments.hbs
+++ b/partials/comments.hbs
@@ -1,5 +1,8 @@
 <section class="post-comments">
-  <div id="disqus_thread"></div>
+    
+<!-- 多说公共JS代码 end -->
+
+  <!--<div id="disqus_thread"></div>
   <script type="text/javascript">
       var disqus_shortname = ''; // required: replace example with your forum shortname
       
@@ -12,5 +15,5 @@
       })();
   </script>
   <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-  <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+  <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>-->
 </section>
