--- a/partials/side-panel.hbs
+++ b/partials/side-panel.hbs
@@ -8,7 +8,10 @@
         <a href="{{@blog.url}}" title="前往 {{@blog.title}} 的主页"><img src="{{@blog.logo}}" width="80" alt="{{@blog.title}} logo" class="panel-cover__logo logo" /></a>
         {{/if}}
         <h1 class="panel-cover__title panel-title"><a href="{{@blog.url}}" title="前往 {{@blog.title}} 的主页">{{@blog.title}}</a></h1>
-        <span class="panel-cover__subtitle panel-subtitle">上善若水，人淡如菊</span>
+        <br>
+        <span class="panel-cover__subtitle panel-subtitle">人之所以活的累，是因为放不下架子，撕不开面子，解不开情结。
+
+</span>
         <hr class="panel-cover__divider" />
         <p class="panel-cover__description">{{@blog.description}}</p>
         <hr class="panel-cover__divider panel-cover__divider--secondary" />
@@ -17,10 +20,15 @@
           <div>
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
+              <li class="navigation__item"><a href="/" title="主页" class="blog-button">主页</a></li>
               <li class="navigation__item"><a href="/#blog" title="访问博客" class="blog-button">博客</a></li>
-              <li class="navigation__item"><a href="http://project.onevcat.com" target="_blank" title="我的项目">项目</a></li>
-              <li class="navigation__item"><a href="http://about.onevcat.com/" title="了解更多关于我">关于</a></li>
-              <li class="navigation__item"><a href="http://eepurl.com/" title="邮件订阅本站">订阅</a></li>
+              <li class="navigation__item"><a href="/tag/gear/" title="齿轮" class="blog-button">齿轮</a></li>
+              <li class="navigation__item"><a href="/tag/software/" title="软件开发" class="blog-button">软件开发</a></li>
+              <li class="navigation__item"><a href="/tag/mechinelearning/" title="机器学习" class="blog-button">机器学习</a></li>
+              <li class="navigation__item"><a href="/tag/sui-bi/" title="随笔" class="blog-button">随笔</a></li>
+              <li class="navigation__item"><a href="https://github.com/gxz04220427" target="_blank" title="我的项目">项目</a></li>
+              <li class="navigation__item"><a href="http://about.guoxiaozhong.com/" title="了解更多关于我">关于</a></li>
+              <li class="navigation__item"><a href="/rss/" title="邮件订阅本站">订阅</a></li>
             </ul>
           </nav>
           </div>
@@ -33,6 +41,6 @@
 
     </div>
 
-    <div class="panel-cover--overlay cover-blue"></div>
+    <div class="panel-cover--overlay cover-disabled"></div>
   </div>
 </header>
